// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  border-radius: 16px;
}

<div
  class="skeleton emotion-0"
  style="width: 32px; height: 32px;"
/>
`;

exports[`Render shapesquare - value[0] 1`] = `
.emotion-0 {
  border-radius: 0;
}

<div
  class="skeleton emotion-0"
  style="width: 32px; height: 32px;"
/>
`;

exports[`Render sizedefault - value[0] 1`] = `
.emotion-0 {
  border-radius: 16px;
}

<div
  class="skeleton emotion-0"
  style="width: 32px; height: 32px;"
/>
`;

exports[`Render sizelarge - value[0] 1`] = `
.emotion-0 {
  border-radius: 20px;
}

<div
  class="skeleton emotion-0"
  style="width: 40px; height: 40px;"
/>
`;

exports[`Render sizesmall - value[0] 1`] = `
.emotion-0 {
  border-radius: 12px;
}

<div
  class="skeleton emotion-0"
  style="width: 24px; height: 24px;"
/>
`;
